--- a/src/views/Donaciones/todas-las-donaciones.hbs
+++ b/src/views/Donaciones/todas-las-donaciones.hbs
@@ -19,7 +19,8 @@
     {{else}}
     <div class="card mx-auto">
         <div class="card-body">
-            <p class="lead">No tienes donaciones aun</p>
+            <h1> Hola {{user.name}}, gracias por hacer la direfencia.</h1>
+            <p class="lead">Lo que no usas a otro le puede servir!</p>
             <a href="/donacion/crear" class="btn btn-success btn-block">Dona algo!</a>
         </div>
     </div>
