--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,24 @@
-<div class="jumbotron mt-4">
+<body>    
+   
+<img src="/img/inicio.png" class="rouned-circle  mx-auto d-letf m-4 logo" alt="Logo">
+
+    <h1 class="display-2">DonalApp</h1>
+    <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis 
+        velit eius ipsa doloremque, explicabo reprehenderit vel assumenda aspernatur
+        voluptatum aut quaerat neque excepturi a iusto molestias debitis, magnam itaque qui.</p>
+
+    <hr class="my-4">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident animi voluptatum
+        ut quibusdam asperiores, harum nostrum, nulla corporis dolor tenetur alias facilis! 
+        Modi minima incidunt, dolorem reiciendis sapiente cupiditate blanditiis.</p>
+
+    <a href="https://www.youtube.com" class="btn btn-primary btn-lg">youtube</a>
+</div>
+
+
+
+<div class="jumbotron mt-4 col-md-7">
     <h1 class="display-4">DonalApp</h1>
     <p class="lead">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis 
@@ -12,3 +32,4 @@
 
     <a href="https://www.youtube.com" class="btn btn-primary btn-lg">youtube</a>
 </div>
+</body>
