--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -3,3 +3,8 @@ body {
     background: -webkit-linear-gradient(to right, #480048, #C04848);
     background: linear-gradient(to right, #480048, #C04848);
 }
+
+.logo {
+    width: 30%;
+
+}
