--- a/src/views/partials/errores.hbs
+++ b/src/views/partials/errores.hbs
@@ -1,4 +1,13 @@
-{{#each errors}}
+{{#if error }}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{error}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+{{/if}}
+
+{{#each errors }}
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         {{text}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
