--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,1 +1,25 @@
-<h1>INGRSAR</h1>
+<div class="row">
+    <div class="col-md-4 mx-auto">
+        <div class="card mt-6 text-center">
+            <div class="card-header">
+                <h1>Login</h1>
+            </div>
+            <img src="/img/Logo2.png" class="rouned-circle  mx-auto d-block m-4 logo" alt="Logo">
+            <div class="card-body">
+                <form action="/users/signin" method="POST">
+                    <div class="form-group">
+                        <input type="email" class="form-control" name="email" placeholder="Email" autofocus>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" name="password" placeholder="Password"> 
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block">
+                            Login
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
