--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,42 +1,43 @@
-<div class="row">
-    <div class="col-md-4 mx-auto">
-        <div class="card">
-            <div class="card-header">
-                Registrate
-            </div>
-            <div class="card-body">
-                <form action="/users/signup" method="POST">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="nambre" placeholder="Nombre">
+    <div class="row">
+        <div class="col-md-7 mx-auto">
+            <div class="card">
+                <div class="card-header">
+                    Registrate
+                </div>
+                <div class="card-body">
+                    
+                    <form action="/users/signup" method="POST">
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="name">Nombre</label>
+                            <input type="text" class="form-control" name="name" placeholder="Nombre" value="{{name}}">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="apellido">Apellido</label>
+                            <input type="text" class="form-control" name="apellido" placeholder="Apellido" value="{{apellido}}">
+                        </div>      
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="apellido" placeholder="Apellido">
+                        <label for="inputEmail">Email</label>
+                        <input type="email" class="form-control" name="email" placeholder="Ejemplo@gmail.com" value="{{email}}">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword">Password</label>
+                            <input type="password" class="form-control" name="password" placeholder="Password" value="{{password}}">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword">Confirmar password</label>
+                            <input type="password" class="form-control" name="confirmar_password" placeholder="Password" value="{{confirmar_password}}">
+                        </div>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="pais" placeholder="Pais">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="ciudad" placeholder="Ciudad">
-                    </div>
-                    <div class="form-group">
-                        <input type="int" class="form-control" name="celular" placeholder="Celular">
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" name="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="confirmar_password" placeholder="Confirmar password">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block">
+                        <button type="submit " class="btn btn-primary btn-block">
                             Enviar
                         </button>
-                    </div>
-                </form>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
