--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,35 +1,68 @@
-<body>    
-   
-<img src="/img/inicio.png" class="rouned-circle  mx-auto d-letf m-4 logo" alt="Logo">
+<body>
+    <header>
+        <section class="textos-header">
+            <h1>DonalApp</h1>
+            <h2>Tú puedes hacer de esté un mundo mejor</h2>
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+                style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #fff;"></path>
+            </svg></div>
+    </header>
+    <main>
+        <section class="contenedor sobre-nosotros">
+            <h2 class="titulo">¿Quiénes somos y qué hacemos?</h2>
+            <div class="contenedor-sobre-nosotros">
+                <img src="img/grup.png" alt="" class="imagen-about-us">
+                <div class="contenido-textos">
+                    <p>DonalApp es una aplicación que tiene como objetivo realizar una comunicación con organizaciones benéficas dedicada a ayudar a los necesitados y personas donantes con un buen corazón. Nuestra meta es mejorar las vidas de los miembros desafortunados que carecen de necesidades y contribuir al cuidado del medio ambiente.  Contáctenos para saber qué puede hacer para contribuir al cambio.</p>
+                    <p>Cada día el  60% de elementos que presentan un buen estado, es arrojado al basurero...
 
-    <h1 class="display-2">DonalApp</h1>
-    <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis 
-        velit eius ipsa doloremque, explicabo reprehenderit vel assumenda aspernatur
-        voluptatum aut quaerat neque excepturi a iusto molestias debitis, magnam itaque qui.</p>
+Un 10% de niños jóvenes y adultos presentan necesidades tan básico como lo es el de vestir...
 
-    <hr class="my-4">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident animi voluptatum
-        ut quibusdam asperiores, harum nostrum, nulla corporis dolor tenetur alias facilis! 
-        Modi minima incidunt, dolorem reiciendis sapiente cupiditate blanditiis.</p>
+Esta idea nació al ver a estas personas necesitadas personas que rebuscan en los basureros estas objetos...
 
-    <a href="https://www.youtube.com" class="btn btn-primary btn-lg">youtube</a>
-</div>
+Fue muy triste para mi ver como una niña saltaba de la alegría por que encontró un par de zapatos de su talla...
 
+Entonces por que en lugar de arrojar tus cosas que ya no usas o ya no te gustan a personas que le hace falta eso que ya no quieres?</p>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section class="contenedor sobre-nosotros">
+            <h2 class="titulo">¿Qué puedes donar?</h2>
+            <div class="contenedor-sobre-nosotros">
+                <img src="img/inicio.png" alt="" class="imagen-about-us">
+                <div class="contenido-textos">
+                    <h3><span>1</span>Objetos en buen estado</h3>
+                    <p>Si le inspiran las causas que promueve DonalApp, apreciaríamos mucho su apoyo. Done alegría e infancia. Es fácil y tendrá un enorme impacto en la vida de muchas personas necesitadas.</p>
+                    <h3><span>2</span>Donar prendas</h3>
+                    <p>Puedes donar ropa, muchas personas presentan estas necesidades, lo que no te sirve le puede servir a otros.</p>
+                    <h3><span>3</span>Puedes donar todo lo que quieras!</h3>
+                    <p>Puedes donar todo lo que ves que no usas ni usarás en un futuro y que le pueda servir a otras personas. <br>
+                        Si no te gusta, si no te sirve, si no lo usas... <br>
 
-
-<div class="jumbotron mt-4 col-md-7">
-    <h1 class="display-4">DonalApp</h1>
-    <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis 
-        velit eius ipsa doloremque, explicabo reprehenderit vel assumenda aspernatur
-        voluptatum aut quaerat neque excepturi a iusto molestias debitis, magnam itaque qui.</p>
-
-    <hr class="my-4">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident animi voluptatum
-        ut quibusdam asperiores, harum nostrum, nulla corporis dolor tenetur alias facilis! 
-        Modi minima incidunt, dolorem reiciendis sapiente cupiditate blanditiis.</p>
-
-    <a href="https://www.youtube.com" class="btn btn-primary btn-lg">youtube</a>
-</div>
+                        Puedes dárselo a quien le pueda servir y haz de este un mundo más feliz.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="contenedor-footer">
+            <div class="content-foo">
+                <h4>Telefono</h4>
+                <p>8296312</p>
+            </div>
+            <div class="content-foo">
+                <h4>Email</h4>
+                <p>Liliuospina@gmail.com</p>
+            </div>
+            <div class="content-foo">
+                <h4>Ubicación</h4>
+                <p>Medellin</p>
+            </div>
+        </div>
+        <h2 class="titulo-final">&copy; DonalApp.com</h2>
+    </footer>
 </body>
