--- a/src/views/Donaciones/edit-donacion.hbs
+++ b/src/views/Donaciones/edit-donacion.hbs
@@ -1,4 +1,5 @@
-<div class="col-md-4 mx-auto">
+<div class="container-custom">
+  <div class="col-md-4 mx-auto">
     <div class="card">
         <div class="card-header">
             <h3>Editar Donacion</h3>
@@ -20,4 +21,5 @@
             </form>
         </div>
     </div>
+  </div>
 </div>
