--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,22 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DonalApp</title>
 
-    <link href="/styles/common.css" rel="stylesheet">
-    <link href="/styles/landing.css" rel="stylesheet">
-    <link href="/styles/header.css" rel="stylesheet">
-    <link href="/styles/footer.css" rel="stylesheet">
-    <link href="/styles/forms.css" rel="stylesheet">
-    <link href="/styles/filter.css" rel="stylesheet">
-    <link href="/styles/grid.css" rel="stylesheet">
-    <link href="/styles/club_profile.css" rel="stylesheet">
-    <link href="/styles/user_profile.css" rel="stylesheet">
-    <link href="/styles/add.css" rel="stylesheet">
-    <link href="/styles/event.css" rel="stylesheet">
-    <link href="/styles/ticket.css" rel="stylesheet">
-    <link href="/images/icon.png" rel="icon">
-
     <!-- BOOTSTRAP 4 -->
-    <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
+    
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/css/mdb.min.css" rel="stylesheet">
 
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
@@ -29,9 +23,14 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <link rel="shortcut icon" href="img/Logo2.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet"> 
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/estilos.css">
+
 
 
 </head>
@@ -39,13 +38,13 @@
 
     {{> navegacion}}
 
-    <main class="container p-4">
+    <main>
         {{> mensaje }}
         {{> errores }}
 
         {{{ body }}}
     </main>
 
-    <p>Footer</p>
+    {{!-- <p>Footer</p> --}}
 </body>
 </html>
