--- a/src/public/css/estilos.css
+++ b/src/public/css/estilos.css
@@ -8,6 +8,10 @@ body {
     font-family: 'open sans';
 }
 
+hr{
+    padding: 40px;
+    border-color: white;
+}
 .contenedor {
     padding: 60px 0;
     width: 90%;
@@ -23,41 +27,621 @@ body {
     margin-bottom: 60px;
 }
 
-/* Header */
+/*-----------------------------------*/
+
+.container-body{
+    align-content: center;
+    text-align: center;
+    margin-bottom: auto;
+    margin-left: 50px;
+}
+
+
+
+@import 'https://fonts.googleapis.com/css?family=Raleway';
+
+
+div.container
+{
+    font-family: Raleway;
+    margin: 0 auto;
+	text-align: right;
+}
+
+div.container a
+{
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+}
+
+/* Pull up and down  */
+div.pullUpDown a:before, div.pullUpDown a:after
+{
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0px;
+    content: '';
+    background: #FFF;
+    opacity: 0.3;
+    transition: all 0.3s;
+}
+
+div.pullUpDown a:before
+{
+    top: 0px;
+} 
+
+div.pullUpDown a:after
+{
+    bottom: 0px;
+}
+
+div.pullUpDown a:hover:before, div.pullUpDown a:hover:after
+{
+    height: 100%;
+}
+
+div.pullRightLeft a:hover:before, div.pullRightLeft a:hover:after
+{
+    width: 100%;
+}
+
+/*     */
+  
+.btn-button {
+    margin: 0 auto;
+    text-align: center;
+    font-family: "Roboto";
+    color: #fff;
+
+}
+
+  .btn-5 {
+    border-radius: 10px;
+    display: inline-block;
+    padding: 1px 10px;
+    
+    cursor: pointer;
+    letter-spacing: 2px;
+    position:relative;
+    overflow:hidden;
+    margin: 0 20px;
+  }
+  
+  .btn-5:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0;
+    background : rgb(80, 8, 80);
+    left: 0;
+    bottom: 0;
+    transition: all .3s;
+    opacity: 0.3;
+  }
+  
+  .btn-5:hover:before {
+    width: 100%;
+  }
+  
+  /* Buton 5 Bitti */
+  
+  .btn-6 {
+
+    border-radius: 10px;
+    text-align: center;
+    display: inline-block;
+    padding: 1px 10px;
+    cursor: pointer;
+    letter-spacing: 2px;
+    position:relative;
+    overflow:hidden;
+    margin: 0 20px;
+  }
+  
+  .btn-6:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0;
+    background : rgb(80, 8, 80);
+    left: 100%;
+    bottom: 0;
+    transition: all .3s;
+    opacity: 0.3;
+  }
+  
+  .btn-6:hover:before {
+    width: 100%;
+    left:0;
+  }
+  
+  /*---------------------------------------------------*/
+  
 
 header {
     width: 100%;
     height: 600px;
     background: #bc4e9c;
-    /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/Inicio.jpg);
-    /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/Inicio.jpg);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-attachment: fixed;
     position: relative;
 }
 
-nav{
-    text-align: right;
-    padding: 30px 50px 0 0;
-}
-
-nav > a{
-    color:#fff;
-    font-weight: 300;
-    text-decoration: none;
-    margin-right: 10px;
-}
-
-nav > a:hover{
-    text-decoration: underline;
-}
 
 header .textos-header{
     display: flex;
-    height: 430px;
+    height: 330px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.textos-header h1{
+    font-size: 50px;
+    color:#fff;
+}
+
+.textos-header h2{
+    font-size: 30px;
+    font-weight: 300;
+    color:#fff;
+}
+
+.wave{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+/* About us */
+
+main .sobre-nosotros{
+    padding: 70px 70 70px 30;
+}
+.contenedor-sobre-nosotros{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.imagen-about-us{
+    width: 38%;
+}
+
+.sobre-nosotros .contenido-textos{
+    width: 48%;
+}
+
+.contenido-textos h3{
+    margin-bottom: 15px;
+}
+
+.contenido-textos h3 span{
+    background: #4d0686;
+    color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    padding: 2px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    margin-right: 5px;
+}
+
+.contenido-textos p{
+    padding: 70px 30px 0px 90px;
+    font-weight: 300;
+    text-align: justify;
+}
+
+/* Galeria */
+
+
+.portafolio{
+    background: #f2f2f2;
+}
+
+.galeria-port{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.imagen-port{
+    width: 24%;
+    margin-bottom: 10px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.imagen-port > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.hover-galeria{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    transform: scale(0);
+    background: hsla(273,91%,27%, 0.7);
+    transition: transform .5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hover-galeria img{
+    width: 50px;
+}
+
+.hover-galeria p{
+    color: #fff;
+}
+
+.imagen-port:hover .hover-galeria{
+    transform: scale(1);
+}
+
+/* Clients */
+
+.cards{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cards .card{
+    background: #4d0686;
+    display: flex;
+    width: 46%;
+    height: 800px;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+}
+
+.cards .card img{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid #fff;
+    border-radius: 50%;
+    display: block;
+}
+
+.cards .card > .contenido-texto-card{
+    width: 60%;
+    color: #fff;
+}
+
+.cards .card > .contenido-texto-card p{
+    font-weight: 300;
+    padding-top: 5px;
+}
+
+/*  Our team */
+
+.about-services{
+    background: #f2f2f2;
+    padding-bottom: 30px;
+}
+
+
+.servicio-cont{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.servicio-ind{
+    width: 28%;
+    text-align: center;
+}
+
+.servicio-ind img{
+    width: 90%;
+}
+
+.servicio-ind h3{
+    margin: 10px 0;
+}
+
+.servicio-ind p{
+    font-weight: 300;
+    text-align: justify;
+}
+
+/* footer */
+
+footer{
+    background: #414141;
+    padding: 60px 0 30px 0;
+    margin: auto;
+    overflow: hidden;
+}
+
+.contenedor-footer{
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    margin: auto;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #ccc;
+}
+
+.content-foo{
+    text-align: center;
+}
+
+.content-foo h4{
+    color: #fff;
+    border-bottom: 3px solid #af20d3;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.content-foo p{
+    color: #ccc;
+}
+
+.titulo-final{
+    text-align: center;
+    font-size: 24px;
+    margin: 20px 0 0 0;
+    color: #9e9797;
+}
+
+@media screen and (max-width:900px){
+    header{
+        background-position: center;
+    }
+
+    .contenedor-sobre-nosotros{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .sobre-nosotros .contenido-textos{
+        width: 90%;
+    }
+
+    .imagen-about-us{
+        width: 90%;
+    }
+
+    /* Galeria */
+
+    .imagen-port{
+        width: 44%;
+    }
+
+    /* Clientes */
+
+    .cards{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cards .card{
+        width: 90%;
+    }
+
+    .cards .card:first-child{
+        margin-bottom: 30px;
+    }
+
+    /* servicios */
+
+    .servicio-cont{
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .servicio-ind{
+        width: 100%;
+        text-align: center;
+    }
+
+    .servicio-ind:nth-child(1), .servicio-ind:nth-child(2){
+        margin-bottom: 60px;
+    }
+
+    .servicio-ind img{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:500px){
+    nav{
+        text-align: center;
+        padding: 30px 0 0 0;
+    }
+
+    
+
+    .textos-header h1{
+        font-size: 35px;
+    }
+
+    .textos-header h2{
+        font-size: 20px;
+    }
+
+    /* ABOUT US */
+
+    .imagen-about-us{
+        margin-bottom: 60px;
+        width: 99%;
+    }
+
+    .sobre-nosotros .contenido-textos{
+        width: 95%;
+    }
+
+    /* Galeria */
+
+    .imagen-port{
+        width: 95%;
+    }
+
+    /* Clients */
+
+    .cards .card{
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cards .card img{
+        width: 90px;
+        height: 90px;
+    }
+
+    /* Footer */
+
+    .contenedor-footer{
+        flex-direction: column;
+        border: none;
+    }
+
+    .content-foo{
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    .content-foo h4{
+        border: none;
+    }
+
+    .content-foo p{
+        color: #ccc;
+        border-bottom: 1px solid #f2f2f2;
+        padding-bottom: 20px;
+    }
+
+    .titulo-final{
+        font-size: 20px;
+    }
+}
+
+
+
+.container--redes{
+    width:400px;
+    left:0;
+    position:fixed;
+    top:25%;
+    }
+  
+  
+  .icon{
+    top:50%;
+    position:relative;
+    margin-bottom:10px;
+    }
+  
+  .icon-primary{
+    display:inline-block;
+    text-decoration:none;
+    color:#fff;
+    background-color:#3b5998;
+    border-radius:100%;
+    position:relative;
+    z-index:1;
+    box-shadow:1px 0 1px rgba(0,0,0,.5);
+    height:40px;
+    width:40px;
+    text-align:center;
+    line-height:40px;
+    }
+  
+  .container-description{
+    overflow:hidden;
+    position:absolute;
+    top:0;
+    left:24px;
+  
+  }
+  
+  .icon-description{
+    width:250px;
+    display:inline-block;
+    text-decoration:none;
+    color:#fff;
+    background-color:#3b5998;
+    height:40px;
+    line-height:40px;
+    padding-left:40px;
+    border-radius:0 20px 20px 0;
+    transform: translate3d(-110%, 0, 0);
+    transition:transform 175ms ease;
+  }
+  
+  .icon-primary:hover  ~ .container-description .icon-description{
+       transform: translate(0, 0);
+    
+  }
+  
+  /*colores para redes sociales*/
+  .color-twitter{
+    background-color:#3B94D9;
+  }
+  
+  .color-linkedin {
+    background-color: #4173ac;
+  }
+
+  .color-github {
+      background-color: #000;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+
+
+
+
+header .textos-header{
+    display: flex;
+    height: 330px;
     width: 100%;
     align-items: center;
     justify-content: center;
@@ -93,7 +677,7 @@ main .sobre-nosotros{
 }
 
 .imagen-about-us{
-    width: 38%;
+    width: 48%;
 }
 
 .sobre-nosotros .contenido-textos{
@@ -189,7 +773,7 @@ main .sobre-nosotros{
     background: #4d0686;
     display: flex;
     width: 46%;
-    height: 200px;
+    height: 400px;
     align-items: center;
     justify-content: space-evenly;
     border-radius: 5px;
@@ -424,3 +1008,17 @@ footer{
         font-size: 20px;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
